2007-12-14  Tom Tromey  <tromey@redhat.com>

	* c-common.h (c_set_cpp_error_callback): Declare.
	* c-lex.c (c_cpp_error): New function, renamed and moved from
	cp_cpp_error.
	(c_set_cpp_error_callback): New function.
	* c-parser.c (c_parser_lex_string): Set location from first string
	token.
	(c_parser_lex_all): Call c_set_cpp_error_callback.

2007-12-14  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_parser_update_checksum): Handle ERROR_MARK.

2007-12-14  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (pushdecl): Pass NULL directly to duplicate_decls.
	(duplicate_decls): Check for non-NULL binding.

2007-12-14  Tom Tromey  <tromey@redhat.com>

	* c-common.c (c_type_hash): Handle VLAs.

2007-12-13  Tom Tromey  <tromey@redhat.com>

	* tree-nested.c (gimplify_all_functions): New function.
	(lower_nested_functions): Call it.
	* cgraphunit.c (cgraph_lower_function): Call
	lower_nested_functions here...
	(cgraph_finalize_function): ... not here.
	(cgraph_analyze_function): Restore current_function_decl.

2007-12-12  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (check_hunk_binding): Fix multi-hunk failure check.
	* c-tree.h (C_IS_RESERVED_WORD): Update documentation.

2007-12-11  Tom Tromey  <tromey@redhat.com>

	* gcc.c (execute): Call client_send_directory.
	(server_callback): Add argument.
	* server.c (client_send_directory): New function.
	(request_and_response): Handle '.' request.
	* server.h (client_send_directory): Declare.
	(server_callback): Add argument.
	* toplev.c (get_src_pwd): Ensure src_pwd is allocated.  Use
	getcwd.
	(clear_src_pwd): New function.
	(server_callback): Call it.  Add argument.  Set directory.

2007-12-11  Tom Tromey  <tromey@redhat.com>

	* c-typeck.c (require_complete_type): Now static.
	(build_function_call): Cast function type.
	(comptypes_internal): Use smashed type variant.
	(build_indirect_ref): Convert pointer type, not type of
	dereference.
	(really_start_incremental_init): Use smashed type variant.